# my_Ludo

./: .gitignore  CLAUDE.md  LICENSE  family-ludo-prompt.md
backend/: .env.example  pyproject.toml
backend/app/: auth.py  config.py  db.py  deps.py  ludo.py  main.py  models.py  schemas.py  seed.py  sockets.py
backend/app/routes/: admin.py  auth.py  gameplay.py  games.py  users.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  Layout.jsx  api.js  auth.jsx  boardLayout.js  components.jsx  index.css  main.jsx  socket.js
frontend/src/pages/: AboutDeveloper.jsx  BuildGame.jsx  ChangePassword.jsx  Dashboard.jsx  GamePage.jsx  Leaderboard.jsx  Login.jsx  ManageFamily.jsx  MembersArea.jsx
