[project]
name = "family-ludo-backend"
version = "0.1.0"
description = "Backend for the private Family Ludo app"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlmodel>=0.0.22",
    "psycopg[binary]>=3.2",
    "pyjwt>=2.9",
    "bcrypt>=4.2",
    "pydantic-settings>=2.5",
    "python-socketio>=5.11",
]
